Sync all content

--- a/content/resources/18-s096iap22.md
+++ b/content/resources/18-s096iap22.md
@@ -5,9 +5,9 @@ draft: false
 file: /courses/18-s096-matrix-calculus-for-machine-learning-and-beyond-january-iap-2022/18-s096iap22.jpg
 file_type: image/jpeg
 image_metadata:
-  caption: ''
+  caption: What is the derivative of determinant A? (Image by MIT OpenCourseWare.)
   credit: ''
-  image-alt: ''
+  image-alt: Equation of derivative of determinant A.
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 resourcetype: Image
