Sync all content

--- a/content/resources/18-s096iap22.md
+++ b/content/resources/18-s096iap22.md
@@ -6,7 +6,7 @@ file: /courses/18-s096-matrix-calculus-for-machine-learning-and-beyond-january-i
 file_type: image/jpeg
 image_metadata:
   caption: What is the derivative of determinant A? (Image by MIT OpenCourseWare.)
-  credit: ''
+  credit: Image by MIT OpenCourseWare.
   image-alt: Equation of derivative of determinant A.
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
